# aes-square-attack

./: .travis.yml  LICENSE  MANIFEST.in  README.rst  pre-commit-hook  requirements.txt  setup.cfg  tox.ini
aes/: aes.py  common.py  connectors.py  key_expension.py  square.py
scripts/: compute_sbox.py
tests/: test_aes.py  test_key_expension.py  test_square.py
tests/functional/: test_crack_key.py
tests/unit/: test_connectors.py  test_key_expension.py  test_square.py
