[metadata]
name = aes-square-attack
description = Homemade implementation of Square Attack against 4 rounds AES
version = 0.1.0
author = Thomas PERROT
author_email = thomas.perrot1@gmail.com
url = https://github.com/thomasperrot/aes-square-attack
long_description = file: README.rst
keywords =
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    numpy

[options.extras_require]
dev =
    tox
    black
    isort

test =
    pytest
    pytest-cov

lint =
    black
    flake8
    isort
    mypy
    check-manifest

[options.packages.find]
include =
    aes
    aes.*

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=120
not_skip = __init__.py

[flake8]
max-line-length = 120
ignore = E203

[mypy-numpy]
ignore_missing_imports = True

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=aes -vv --strict-markers
testpaths =
    tests
markers =
    slow